--- a/templates/index.html
+++ b/templates/index.html
@@ -136,11 +136,11 @@
                     <li class="card">
                         <div class="card description">
                             <h2>Flock</h2>
-                            <p>Dale un toque terciopelo a tu diseño. Con toda la gama de colores.
+                            <p>Dale un toque de terciopelo a tu diseño. Con toda la gama de colores.
                             </p>
                         </div>
                         <div class="card image">
-                            <img src="static/images/acabados-foil.jpg" alt="Image description">
+                            <img src="static/images/UL5A7732.jpg" alt="Image description">
                         </div>
                     </li>
                 </ul>
@@ -164,9 +164,8 @@
 
             <section class="footer-section-contact">
                 <h2>Contáctanos</h2>
-                <img src="static/images/phone.svg" alt="Phone">
-                <p>Email: yansefantasia@gmail.com</p>
-                <p>Phone: +34 636976328</p>
+                <p>yansefantasia@gmail.com</p>
+                <p>+34 636976328</p>
             </section>
         </div>
         <div class="footer-bottom">
