--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="icon" href="./yanselogo.png">
+    <link rel="icon" href="static/images/yanselogo.png">
     <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
      
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
